[package]
name = "conhash"
version = "0.1.0"
authors = ["alex <bigbadmath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
fake = { version = "2.2", features=['derive']}
log = "0.4.11"
rand = "0.7.3"
